--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>AppTitiFrontend</title>
+  <title>TiTi Protocol</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -43,7 +43,7 @@
     }
 
   </style>
-<style>.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal}html,body{height:100%;background:#000000}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}</style><link rel="stylesheet" href="styles.4e3ad419d3054462.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.4e3ad419d3054462.css"></noscript></head>
+<style>.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal}html,body{height:100vh;background:#000000;min-width:320px;overflow:hidden}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}div{box-sizing:border-box}</style><link rel="stylesheet" href="styles.bc2e08f8ad42c3a9.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.bc2e08f8ad42c3a9.css"></noscript></head>
 
 <body class="mat-typography">
   <app-root>
@@ -234,7 +234,7 @@
       </div>
     </div>
   </app-root>
-<script src="runtime.8edcf5047db468e3.js" type="module"></script><script src="polyfills.95fdf6a3e09f003e.js" type="module"></script><script src="main.c87a2e7a9ada46b0.js" type="module"></script>
+<script src="runtime.47c438f4757ccda1.js" type="module"></script><script src="polyfills.95fdf6a3e09f003e.js" type="module"></script><script src="main.3ac0605a29521768.js" type="module"></script>
 
 
 </body></html>
