--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="assets/material-font/font.css" rel="stylesheet" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/material-font/font.css"></noscript>
+  <!-- <link href="assets/material-font/font.css" rel="stylesheet"> -->
   <link href="assets/material-font/icon.css" rel="stylesheet" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/material-font/icon.css"></noscript>
   <style>
     .fa-spin {
@@ -42,7 +42,7 @@
     }
 
   </style>
-<style>.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal}html,body{height:100vh;background:#000000;min-width:320px;overflow:hidden}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}:root{--swiper-theme-color:#007aff}:root{--swiper-navigation-size:44px}div{box-sizing:border-box}</style><link rel="stylesheet" href="styles.20bf1a0f7ee2c92d.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.20bf1a0f7ee2c92d.css"></noscript></head>
+<style>.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal}html,body{height:100vh;background:#000000;min-width:320px;overflow:hidden}body{margin:0;font-family:Verdana,Roboto,Helvetica Neue,sans-serif}:root{--swiper-theme-color:#007aff}:root{--swiper-navigation-size:44px}div{box-sizing:border-box}</style><link rel="stylesheet" href="styles.17c4755f8373d8c4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.17c4755f8373d8c4.css"></noscript></head>
 
 <body class="mat-typography">
   <app-root>
@@ -233,7 +233,7 @@
       </div>
     </div>
   </app-root>
-<script src="runtime.22469a397a0eecc2.js" type="module"></script><script src="polyfills.95fdf6a3e09f003e.js" type="module"></script><script src="main.be113c88febfb57d.js" type="module"></script>
+<script src="runtime.f67c445c0c750c2e.js" type="module"></script><script src="polyfills.95fdf6a3e09f003e.js" type="module"></script><script src="main.deb6662eafec2983.js" type="module"></script>
 
 
 </body></html>
