--- a/index.html
+++ b/index.html
@@ -237,4 +237,13 @@
 <script src="runtime.495a0653961a8e83.js" type="module"></script><script src="polyfills.28ee1a2ce1353f33.js" type="module"></script><script src="main.a98c92b3b630a91e.js" type="module"></script>
 
 
-</body></html>
+</body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JNCPBKR8L9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JNCPBKR8L9');
+</script>
+</html>
