--- a/404.html
+++ b/404.html
@@ -234,11 +234,9 @@
       </div>
     </div>
   </app-root>
-<script src="runtime.495a0653961a8e83.js" type="module"></script><script src="polyfills.28ee1a2ce1353f33.js" type="module"></script><script src="main.a98c92b3b630a91e.js" type="module"></script>
+<script src="runtime.8ac81bfc39e9950a.js" type="module"></script><script src="polyfills.28ee1a2ce1353f33.js" type="module"></script><script src="main.056c0ed8351fcdd5.js" type="module"></script>
 
-
-</body>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JNCPBKR8L9"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-JNCPBKR8L9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -246,4 +244,5 @@
 
   gtag('config', 'G-JNCPBKR8L9');
 </script>
-</html>
+
+</body><!-- Global site tag (gtag.js) - Google Analytics --></html>
